--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.oaky.cuke4duke</groupId>
         <artifactId>junit-runner-parent</artifactId>
-        <version>0.0.4-SNAPSHOT</version>
+        <version>0.0.4-79a6d9c</version>
     </parent>
 
     
