--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.oaky.cuke4duke</groupId>
             <artifactId>junit-runner</artifactId>
-            <version>0.0.4-SNAPSHOT</version>
+            <version>0.0.4-79a6d9c</version>
             <scope>test</scope>
         </dependency>
         <dependency>
