fixed: execution in Eclipse failed due to missing step definitions

--- a/src/test/resources/cuke4dukejunitrunner.properties
+++ b/src/test/resources/cuke4dukejunitrunner.properties
@@ -12,4 +12,5 @@ cuke4duke.tags=~@wip
 #cuke4duke.strict=false
 
 ## set --require arguments. Must be a ':' or ';' separated list of directories
-cuke4duke.require=${project.build.testOutputDirectory};${project.build.outputDirectory}
+cuke4duke.require=target/classes;target/test-classes
+#cuke4duke.require=${project.build.testOutputDirectory};${project.build.outputDirectory}
